Tue Mar 31 18:24:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/share/base-app.rn: --CONF.XXX オプションがちゃんとして
	  なかった

Tue Mar 31 17:36:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy, lib/fairy/template/fairy-HEAD,
	  lib/fairy/template/fairy-BODY, lib/fairy/share/base-app.rb,
	  lib/share/conf.rb Makefile: [要求: #54] fairy shell対応
	
	* bin/fairy-cp, bin/fairy-rm, bin/master, bin/node: base-app.rb追
	  加に伴うリファクタリング

Tue Mar 24 16:52:32 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* conf.rb, fairy.conf: [要求: #2]対応

Thu Mar 19 18:11:51 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* {job,backend,node}/addins.rb: ディレクトリ構成が変わったのに対応

Thu Mar 19 17:32:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: version.rbの位置が変わったのに対応
	* bin/*: $0 を設定
	* bin/{master,node}: オプション -h, -m, -p を追加
	* master.rb, node.rb, controller.rb, processor.rb, fairy.rb:
	  fairyとRubyのバージョンを表示するようにした.

Thu Mar 19 16:59:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* tools/git-tag: ディレクトリ構成変更に伴い変更

Thu Mar 19 16:52:56 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: 第一段完了
	* fairy.rb, conf.rb, fairy.conf: CONF.DEBUG_MONITOR_ON追加

Wed Mar 18 18:51:25 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: その2

Wed Mar 18 18:45:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* directory構成変更: その1

Wed Mar 18 18:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node/njob.rb, node/port.rb, processor.eb:  [要求: #20]
	* backend/b-file-output.rb, backend/b-local-file-output.rb: [Bug: #49]

Mon Mar 16 15:51:16 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [Bug: #43], [Bug: #44] 対応
	
Wed Mar 11 19:08:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb: [Bug: #21]対応
	* bin/controller, bin/master, bin/node, bin/controller,
	  bin/processor, fairy.rb, fairy.conf, conf.rb:
	  CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION 対応