@@ -37,14 +37,14 @@ module Fairy
 	setter = "def #{prop}=(value); @values[:#{prop}] = value; end" unless setter
 	module_eval reader
 	module_eval setter
-	DefaultConf.module_eval reader
+#	DefaultConf.module_eval reader
       end
 
       def def_prop_relative_path(prop, path, base_prop = :HOME)
 	def_prop(prop, 
 		 "def #{prop}; value(:#{prop}) || self.#{base_prop}+'/'+'#{path}'; end")
       end
-      alias def_path def_prop_relative_path
+      alias def_rpath def_prop_relative_path
     end
 
     def value(prop)
@@ -58,11 +58,16 @@ module Fairy
     def_prop :RUBY_BIN
     def_prop :MASTER_HOST
     def_prop :MASTER_PORT
+
     def_prop :HOME
-    def_path :BIN, "bin"
-    def_path :CONTROLLER_BIN, "controller", :BIN
-    def_path :PROCESSOR_BIN, "processor", :BIN
-    def_path :LIB, "lib"
+    def HOME
+      File.expand_path(value(:HOME))
+    end
+
+    def_rpath :BIN, "bin"
+    def_rpath :CONTROLLER_BIN, "controller", :BIN
+    def_rpath :PROCESSOR_BIN, "processor", :BIN
+    def_rpath :LIB, "lib"
 
     def_prop :PREQUEUING_POLICY
     def_prop :POSTQUEUING_POLICY
@@ -79,7 +84,7 @@ module Fairy
     def_prop :SORT_SAMPLING_RATIO_1_TO
     def_prop :SORT_N_GROUP_BY
 
-    def_path :VF_ROOT, "Repos"
+    def_rpath :VF_ROOT, "Repos"
     def_prop :VF_PREFIX
     def_prop :VF_SPLIT_SIZE
 
@@ -252,6 +257,7 @@ module Fairy
     def load_conf
       if @home
 	ENV["FAIRY_HOME"] = @home
+#	ENV["FAIRY_HOME"] = File.expand_path(@home)
 	conf = @home+"/etc/fairy.conf"
 	if File.exists?(conf)
 	  CONF.load_conf conf
@@ -259,6 +265,7 @@ module Fairy
       end
 	
       if @conf
+	ENV["FAIRY_CONF"] = @conf
 	CONF.load_conf @conf
       end
 
@@ -290,17 +297,19 @@ module Fairy
 
     def initialize
       super
-      @file_mode = false
+      @mode = :SUBCOMMAND
     end
 
     def option_parser
       super do |opt|
-	opt.on("-f", "--file"){|val| @file_mode = true}
+	opt.on("-f", "--file"){|val| @mode = :FILE}
+	opt.on("-e", "--exec"){|val| @mode = :EXEC}
       end
     end
-    
+
     def start
-      if !@file_mode && (ARGV.empty? || nosub = !SUBCOMMANDS.include?(ARGV[0]))
+      if @mode == :SUBCOMMAND && 
+	  (ARGV.empty? || nosub = !SUBCOMMANDS.include?(ARGV[0]))
 	puts "そのようなサブコマンドはありません(#{ARGV[0]})." if nosub
 
 	helpbase = opt.help.split(/\n/)
@@ -314,12 +323,17 @@ module Fairy
 	exit
       end
 
-      if @file_mode
+      case @mode
+      when :SUBCOMMAND
+	if File.exist?(CONF.BIN+"/"+ARGV[0])
+	  Process.exec(CONF.RUBY_BIN, CONF.BIN+"/"+ARGV[0], *ARGV[1..-1])
+	else
+	  Process.exec(CONF.RUBY_BIN, CONF.BIN+"/fairy-"+ARGV[0], *ARGV[1..-1])
+	end
+      when :FILE
 	Process.exec(CONF.RUBY_BIN, *ARGV)
-      elsif File.exist?(CONF.BIN+"/"+ARGV[0])
-	Process.exec(CONF.RUBY_BIN, CONF.BIN+"/"+ARGV[0], *ARGV[1..-1])
-      else
-	Process.exec(CONF.RUBY_BIN, CONF.BIN+"/fairy-"+ARGV[0], *ARGV[1..-1])
+      when :EXEC
+	Process.exec(*ARGV)
       end
     end
   end
