@@ -36,17 +36,30 @@ module Fairy
     end
 
     def start
+Log::debug(self, "AAAAAAAA:0")
       # この位置重要. これによって, ファイル生成のシリアライズ性を保証している
       output_uri = @vfile.gen_real_file_name(@processor.addr, CONF.VF_ROOT)
-      output_file = URI.parse(output_uri).path
+Log::debug(self, "AAAAAAAA:0.5")
+      begin
+	p output_uri
+	output_file = URI.parse(output_uri).path
+      rescue
+	Log::debug_exception
+	raise
+      end
 
+Log::debug(self, "AAAAAAAA:1")
       unless File.exist?(File.dirname(output_file))
 	create_dir(File.dirname(output_file))
       end
 
+Log::debug(self, "AAAAAAAA:2")
       super do
+Log::debug(self, "AAAAAAAA:3")
 	File.open(output_file, "w") do |io|
+Log::debug(self, "AAAAAAAA:4")
 	  while import = @imports.pop
+Log::debug(self, "AAAAAAAA:5")
 	    for l in import
 	      io.puts l
 	    end
